Fri Apr 9 16:22:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSAttributedString.m: Implement tracking of changes to 
	string returned by [-mutableString] method.  Simplified initialisation.
	* Source/include/NSAttributedString.h: Updated.
	* Source/NSGAttributedString.m: Rewrite to get rid of all known
	problems and to boost performance hugely.
	* Source/include/NSGAttributedString.h: Updated.
	* Source/NSString.m: ([-_baseCount]) optimised.
	* Source/NSGString.m: ([-_baseCount]) optimised.

1999-04-09  Adam Fedor  <fedor@gnu.org>

	* NSCharacterSets: Updated sets to Version 2.1.8
	* Souce/NSCharacterSet.m: Updated to reflect new names of character
	sets.

1999-04-08  Adam Fedor  <fedor@gnu.org>

	* configure.in: Remove test for libobjc.a

Thu Apr 8 12:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSArray.m: Make copying behavior consistent with OPENSTEP.
	* Source/NSDictionary.m: Make copying behavior consistent with OPENSTEP.
	* Source/NSSet.m: Make copying behavior consistent with OPENSTEP.

Wed Apr 7 12:22:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCharacterSet.m: Use punctuationCharSet.dat

1999-04-06  Adam Fedor  <fedor@gnu.org>

	* NSCharacterSets/punctuationCharSet.dat: New file

Mon 5  7:33:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSRange.m: Moved most functions into header file, while
	including header to generate linkable versions.
	* Source/include/NSGeometry.h: Define MIN and MAX if required.
	* Source/include/NSRange.h: Define MIN and MAX if required and make
	most range functions a efficiency.

Thu Mar 11 10:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSDebug.m: Added two new functions for logging messags.
	* Source/include/NSDebug.h: Added four new logging macros.
	* Source/NSBundle.m: Updated to use new NSDebugMLLog() macro.

Wed Mar 10 09:54:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
