@@ -1,3 +1,9 @@
+Fri Apr 9 22:04:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSGAttributedString.m: Final optimisation - remove almost all
+	objc runtime overhead.  Combined changes should result in a factor of
+	2 to 10 speedup (depending on operation) over original code.
+
 Fri Apr 9 16:22:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/NSAttributedString.m: Implement tracking of changes to 
